sample/msvc/error/c2310.cpp
// C2310.cpp
// compile with: /EHsc
//#include <eh.h>
int main() {
   try {
      throw "Out of memory!";
   }
   catch( int ,int) {}   // C2310 two types
   // try the following line instead
   // catch( int)  {}
}
